--- a/test.html
+++ b/test.html
@@ -1,10 +1,10 @@
 <link rel="stylesheet" href="sml.css">
 <table width='100%'><tr><td>
-<p><h1>8 Days a Week</h1></p>
+<p><h1>8 Days a Week (test)</h1></p>
 <p><h2>Lennon and McCartney</h2></p>
 </td><td style='float:right;'><table><tr>
-<td class = 'chordlabel'>A</td><td class = 'chordlabel'>B</td><td class = 'chordlabel'>Bb</td><td class = 'chordlabel'>C</td><td class = 'chordlabel'>D</td><td class = 'chordlabel'>E</td><td class = 'chordlabel'>F</td><td class = 'chordlabel'>G</td></tr><tr>
-<td class='chordtable'><img class = 'chordimage' src='chord.png'></td><td class='chordtable'><img class = 'chordimage' src='chord.png'></td><td class='chordtable'><img class = 'chordimage' src='chord.png'></td><td class='chordtable'><img class = 'chordimage' src='chord.png'></td><td class='chordtable'><img class = 'chordimage' src='chord.png'></td><td class='chordtable'><img class = 'chordimage' src='chord.png'></td><td class='chordtable'><img class = 'chordimage' src='chord.png'></td><td class='chordtable'><img class = 'chordimage' src='chord.png'></td></tr></table><br />
+<td class = 'chordlabel'>Am</td><td class = 'chordlabel'>C</td><td class = 'chordlabel'>D7</td><td class = 'chordlabel'>F</td><td class = 'chordlabel'>G</td><td class = 'chordlabel'>G7</td></tr><tr>
+<td class='chordtable'><img class = 'chordimage' src='images/am.png'></td><td class='chordtable'><img class = 'chordimage' src='images/c.png'></td><td class='chordtable'><img class = 'chordimage' src='images/d7.png'></td><td class='chordtable'><img class = 'chordimage' src='images/f.png'></td><td class='chordtable'><img class = 'chordimage' src='images/g.png'></td><td class='chordtable'><img class = 'chordimage' src='images/g7.png'></td></tr></table><br />
 </td></tr></table>
 <table>
 <table>
